# doudou_assistant

./: .gitignore  .ruff.toml  EXCHANGE_ADAPTER.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  SQLITE_STORAGE_IMPLEMENTATION.md  SUBSCRIPTIONS.md  TICKET_COMPLETION.md  WINDOWS_PATH_FIX_SUMMARY.md  pyinstaller.spec  pyproject.toml  test_acceptance.py  test_exchange_adapter.py  test_exchange_dry_run.py  test_integration.py  test_mock.py  test_repository.py  test_sqlite_storage.py  test_subscriptions.py  test_subscriptions_simple.py  test_video_crawl.py
.github/workflows/: build.yml
app/: __init__.py  api.py  crawler.py  database.py  db.py  inject.js  main.py  models.py  repository.py  sample_data.py  scroll.js
app/ui/: app.js  index.html  styles.css
examples/: run_subscriptions.py  simple_subscription_demo.py
market_data_collector/: __init__.py  config.py  exchange.py  runtime.py  subscriptions.py
market_data_collector/configs/: market.yaml
market_data_collector/storage/: README.md  __init__.py  sqlite.py
market_data_collector/utils/: logging.py
scripts/: build_mac.sh  build_win.ps1  check_windows_paths.ps1  check_windows_paths.sh
