[project]
name = "doudou-assistant"
version = "0.1.0"
description = "A pywebview-based Douyin data crawler application"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=4.5.1",
    "sqlmodel>=0.0.14",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.uv]
managed = true

[tool.setuptools]
packages = ["app", "market_data_collector"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
